@@ -1,3 +1,7 @@
+Wed Sep 14 13:43:26 CEST 2011
+	Fixing minor memory leak if daemon with HTTPS support failed to
+	initialize (#1766). -CG
+
 Tue Sep 13 09:47:58 CEST 2011
 	Try to release responses more promptly upon connection termination. -CG
 
